# ctypesgen-windows-demo

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  demo_test.c  demoapp.py  demolib.c  demolib.h  setup_mingw.bat
cmake/: CtypesgenDemoConfig.cmake.in
cmake/modules/: DownloadCtypesgen.cmake  DownloadMingw.cmake  FindOrBuildMingw.cmake
